styles.css
body {
    font-family: Roboto, sans-serif;
    background-color: #5e63b6;
    padding: 0;
    margin: 0;
}

#pencil {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 200px;
}

#pencil h1 {
   font-size: 60px;
   color: white;
}

#pencil img {
    height: 200px;
    width: auto;
    padding: 0;
}

.container {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 30px;
}

#grid {
    display: flex;
    flex-flow: row wrap;
    height: 550px;
    width: 550px;
    border: solid 5px black;
    border-radius: 5px;
}

#drawingTools {
    display: flex;
    flex-direction: column;
    height: 480px;
    width: 300px;
    padding: 5px;
    gap: 10px;
}

#drawingTools .setColor {
    display: flex;
    align-self: center;
    appearance: none;
    height: 90px;
    width: 90px;
    background-color: transparent;
    border: none;
}

.setColor::-webkit-color-swatch {
    border-radius: 15px;
    border: solid 5px white;
}

.gridScrollbar {
    display: flex;
    flex-direction: column;
    flex: 1 1 auto;
    align-items: center;
}

.gridScrollbar p {
    display: flex;
    text-align: center;
}

.gridScrollbar #gridInput {
    display: flex;
    flex: 1 1 auto;
    width: 200px;
    overflow: hidden;
    background: #9a905d;
}

.gridScrollbar #displayGrid {
    font-size: 20px;
    color: white;
    font: bold;
}

.wrapper {
    display: flex;
    gap: 10px;
}

.clear, .setGrid {
    display: flex;
    flex: auto;
}

#drawingTools .button {
    font-family: Roboto, sans-serif;
    display: flex;
    /* flex: 1 1 auto; */
    justify-content: center;
    align-items: center;
    height: 50px;
    min-width: 50px;
    border: solid 2px black;
    border-radius: 15px;
    font-size: 20px;
    outline: none;
    cursor: pointer;
    background-color: white;
    transform: scale(1);
}

#drawingTools .button:hover {
    background-color: #f5c7f7;
    transform: scale(1.1);
}

#drawingTools .activeButton {
    background-color: #f5c7f7;
}

#pageContainer {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

footer {
    display: flex;
    background-color: #a393eb;
    justify-content: center;
    align-items: center;
    padding: 20px;
    margin-top: auto;
    font-size: 20px;
}

footer img {
    height: 40px;
    padding: 5px;
}

footer a {
    color: white;
    text-decoration: none;
    list-style-type: none;
}

